--- a/.github/workflows/subtree.yml
+++ b/.github/workflows/subtree.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          repository: Swa-DevOps/CM-AEM-MAIN
+          repository: Swa-DevOps/AEM-MAIN
           ref: refs/heads/scripts
       - name: subtree
         run: |
